--- a/.github/index.html
+++ b/.github/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>  
+    <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Alphabet</title>
@@ -9,92 +9,92 @@
         <div>
             <h1>Alphabet table</h1>
             <table>
-				<thead>
-  					<tr>
-    					<th>Column 0</th><th>Column 1</th>
-  					</tr>
-				</thead>
-				<tbody>
-  					<tr>
-    					<td>A</td><td></td>
-  					</tr>
-  					<tr>
-    					<td></td><td>B</td>
-  					</tr>
-  					<tr>
-    					<td></td><td>C</td>
-  					</tr>
-  					<tr>
-    					<td></td><td>D</td>
-  					</tr>
-  					<tr>
-    					<td>E</td><td></td>
-  					</tr>
-  					<tr>
-    					<td>F</td><td></td>
-  					</tr>
-  					<tr>
-    					<td></td><td>G</td>
-  					</tr>
-  					<tr>
-    					<td>H</td><td></td>
-  					</tr>
+                <thread>
                     <tr>
-    					<td></td><td>I</td>
-  					</tr>
+                        <th>Column 0</th><th>Column 1</th>
+                    </tr>
+                </thread>
+                <tbody>
                     <tr>
-    					<td>J</td><td></td>
-  					</tr>
+                        <td>A</td><td></td>
+                    </tr>
                     <tr>
-    					<td></td><td>K</td>
-  					</tr>
+                        <td></td><td>B</td>
+                    </tr>
                     <tr>
-    					<td></td><td>L</td>
-  					</tr>
+                        <td></td><td>C</td>
+                    </tr>
                     <tr>
-    					<td></td><td>M</td>
-  					</tr>
+                        <td></td><td>D</td>
+                    </tr>
                     <tr>
-    					<td>N</td><td></td>
-  					</tr>
+                        <td>E</td><td></td>
+                    </tr>
                     <tr>
-    					<td>O</td><td></td>
-  					</tr>
+                        <td>F</td><td></td>
+                    </tr>
                     <tr>
-    					<td></td><td>P</td>
-  					</tr>
+                        <td></td><td>G</td>
+                    </tr>
                     <tr>
-    					<td></td><td>Q</td>
-  					</tr>
+                        <td>H</td><td></td>
+                    </tr>
                     <tr>
-    					<td>R</td><td></td>
-  					</tr>
+                        <td>I</td><td></td>
+                    </tr>
                     <tr>
-    					<td></td><td>S</td>
-  					</tr>
+                        <td>J</td><td></td>
+                    </tr>
                     <tr>
-    					<td>T</td><td></td>
-  					</tr>
+                        <td></td><td>K</td>
+                    </tr>
                     <tr>
-    					<td>U</td><td></td>
-  					</tr>
+                        <td></td><td>L</td>
+                    </tr>
                     <tr>
-    					<td>V</td><td></td>
-  					</tr>
+                        <td>M</td><td></td>
+                    </tr>
                     <tr>
-    					<td></td><td>W</td>
-  					</tr>
+                        <td></td><td>N</td>
+                    </tr>
                     <tr>
-    					<td>X</td><td></td>
-  					</tr>
+                        <td>O</td><td></td>
+                    </tr>
                     <tr>
-    					<td></td><td>Y</td>
-  					</tr>
+                        <td></td><td>P</td>
+                    </tr>
                     <tr>
-    					<td></td><td>Z</td>
-  					</tr>
-				</tbody>
-			</table>
+                        <td></td><td>Q</td>
+                    </tr>
+                    <tr>
+                        <td></td><td>R</td>
+                    </tr>
+                    <tr>
+                        <td>S</td><td></td>
+                    </tr>
+                    <tr>
+                        <td>T</td><td></td>
+                    </tr>
+                    <tr>
+                        <td></td><td>U</td>
+                    </tr>
+                    <tr>
+                        <td>V</td><td></td>
+                    </tr>
+                    <tr>
+                        <td>W</td><td></td>
+                    </tr>
+                    <tr>
+                        <td></td><td>X</td>
+                    </tr>
+                    <tr>
+                        <td>Y</td><td></td>
+                    </tr>
+                    <tr>
+                        <td></td><td>Z</td>
+                    </tr>
+                </tbody>
+            </table>
         </div>
     </body>
-</html>
+</html>                
